# formal-l-prac

./: CMakeLists.txt  README.md  main.cpp  parse-expression.cpp  print_ans.cpp  solution.cpp  test.cpp
algo/: main.cpp  nfa.cpp  parse-expression.cpp  print_ans.cpp  solution.cpp
algo/includes/: parse-expression.h  solution.h
src/: CMakeLists.txt
test/: CMakeLists.txt  parse_test.cpp
